--- a/includes/header.html
+++ b/includes/header.html
@@ -10,7 +10,7 @@
             <a href="/pages/features.html" class="nav-features">Tính năng</a>
             <a href="/pages/guide.html" class="nav-guide">Cài đặt & sử dụng</a>
             <a href="/pages/versions.html" class="nav-pricing">Lịch sử phiên bản</a>
-            <a href="/pages/policies.html" class="nav-legal">Pháp lý</a>
+            <a href="/pages/policies.html" class="nav-legal">Điều khoản & Nguyên tắc</a>
         </nav>
     </div>
 </header>
