--- a/includes/header.html
+++ b/includes/header.html
@@ -8,9 +8,9 @@
         <nav class="nav-menu">
             <a href="/" class="nav-home">Trang chủ</a>
             <a href="/pages/features.html" class="nav-features">Tính năng</a>
-            <a href="/pages/guide.html" class="nav-guide">Cài đặt & sử dụng</a>
-            <a href="/pages/versions.html" class="nav-pricing">Lịch sử phiên bản</a>
-            <a href="/pages/policies.html" class="nav-legal">Điều khoản & Nguyên tắc</a>
+            <a href="/pages/guide.html" class="nav-guide">Hướng dẫn</a>
+            <a href="/pages/versions.html" class="nav-pricing">Phiên bản</a>
+            <a href="/pages/policies.html" class="nav-legal">Điều khoản</a>
         </nav>
     </div>
 </header>
