--- a/includes/footer.html
+++ b/includes/footer.html
@@ -1,13 +1,7 @@
 <!-- includes/footer.html  -->
 <footer class="footer">
-    <div class="footer-content">
-        <div class="footer-contact">
-            <div>📧 Doc.online2026@gmail.com</div>
-            <div>📞 0964359911 (Zalo)</div>
-        </div>
-        <div class="footer-copyright">
-            © 2026 Đọc Online
-        </div>
+    <div class="footer-line">
+        📧 Doc.online2026@gmail.com | 📞 0964359911 (Zalo) | © 2026 Đọc Online
     </div>
 </footer>
 <!-- Thêm vào cuối footer.html, trước </footer> hoặc sau </footer> -->
