--- a/includes/footer.html
+++ b/includes/footer.html
@@ -2,15 +2,10 @@
 
 <footer class="footer">
     <div class="footer-line">
-        <span>📧 Doc.online2026@gmail.com | 
-            <svg width="16" height="16" viewBox="0 0 24 24" fill="#0068FF" style="vertical-align: middle; margin-right: 4px;">
-                <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5.5 14.5c-.32.28-.73.43-1.14.43-.41 0-.82-.15-1.14-.43l-1.85-1.57-1.85 1.57c-.64.55-1.63.47-2.17-.17-.55-.64-.47-1.63.17-2.17l2.85-2.42c.64-.55 1.63-.47 2.17.17l2.85 2.42c.64.55.72 1.54.17 2.17z"/>
-            </svg>
-            0964359911
-        </span>
-        <span>© 2026 Đọc Online</span>
+        📧 Doc.online2026@gmail.com | 📞 0964359911 (Zalo) | © 2026 Đọc Online
     </div>
 </footer>
+
 
 <!-- Thêm vào cuối footer.html, trước </footer> hoặc sau </footer> -->
 <button class="back-to-top" id="backToTop" aria-label="Lên đầu trang">
